--- a/src/app.html
+++ b/src/app.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<title>TF2 Decal Extractor</title>
+		<title>TF2 Decal Extractor | TheLazySquid</title>
 		<link rel="icon" type="image/png" href="./favicon.svg" />
 		%sveltekit.head%
 	</head>
